# osmdiff

./: .gitignore  .pdm-python  404.html  CHANGELOG.md  LICENSE  LICENSE.txt  MANIFEST  Pipfile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  readthedocs.yaml  requirements.txt  setup.cfg  setup.py
.circleci/: config.yml
.github/workflows/: build_and_test.yml  deploy.yml  docs.yml  python-package.yml  python-publish.yml
api/augmenteddiff/: index.html
api/config/: index.html
api/continuous/: index.html
api/osm/: index.html
api/osmchange/: index.html
api/utils/: index.html
docs/: conf.py  getting-started.md  index.md  index.rst  osm.md
docs/api/: augmenteddiff.md  config.md  continuous.md  osm.md  osmchange.md  utils.md
docs/examples/: index.md
examples/: continuous.py  geo_interface.py  index.html  try.py
examples/api/: app.py
getting-started/: index.html
osmdiff/: __init__.py  augmenteddiff.py  config.py  diff.py  osmchange.py  replication.py
osmdiff/osm/: __init__.py  osm.py
search/: search_index.json
src/: __init__.py
src/osmdiff/: __init__.py  augmenteddiff.py  config.py  diff.py  join_url.py  osmchange.py  settings.py  util.py
src/osmdiff/osm/: __init__.py  api.py  base.py  member.py  node.py  osm.py  osmchange.py  osmobject.py  relation.py  way.py
src/osmdiff/osm/api/: __init__.py  api.py
test/: test.py
tests/: __test_api.py  conftest.py  test.py  test_adiff.py  test_api.py  test_augmenteddiff.py  test_augmenteddiff_continuous.py  test_geo_interface.py  test_node.py  test_osm.py  test_osmchange.py  test_relation.py  test_relation_from_overpass.py  test_way.py  try.py
tests/Way/: test_way.py
tests/data/: test_delete_metadata.xml  test_osmchange.xml
tests/files/: way_area.xml
tests/fixtures/: node_fremont.xml  osmchange.xml  rel_fishlake.xml  superrelation.xml  way_clearcreek.xml  way_linear.xml  way_nonclosed.xml
