[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "osmdiff"
dynamic = ["version"]
authors = [{ name = "Martijn van Exel", email = "m@rtijn.org" }]
maintainers = [{ name = "Martijn van Exel", email = "m@rtijn.org" }]
description = "A read-only API to OpenStreetMap diffs"
keywords = ["openstreetmap", "osm", "diff", "changeset", "api"]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = ["python-dateutil==2.9.0.post0", "requests==2.32.2"]


[project.urls]
"Homepage" = "https://github.com/mvexel/osmdiff"
"Bug Tracker" = "https://github.com/mvexel/osmdiff/issues"

[project.optional-dependencies]
dev = ["pytest==7.1.3", "pytest-cov==5.0.0"]

[tool.setuptools.dynamic]
version = {attr = "osmdiff.__version__"}