[project]
name = "osmdiff"
dynamic = ["version"]
authors = [{ name = "Martijn van Exel", email = "m@rtijn.org" }]
maintainers = [{ name = "Martijn van Exel", email = "m@rtijn.org" }]
description = "A read-only interface to OpenStreetMap change APIs and files"
keywords = ["openstreetmap", "osm", "diff", "changeset", "api"]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.2",
]
license = "MIT"

[project.urls]
"Homepage" = "https://github.com/mvexel/osmdiff"
"Bug Tracker" = "https://github.com/mvexel/osmdiff/issues"

[tool.setuptools.dynamic]
version = {attr = "osmdiff.__version__"}

[tool.pytest.ini_options]
markers = ["integration: mark a test as an integration test"]
addopts = "--cov=src/osmdiff --cov-report=term-missing --cov-report=html --cov-fail-under=85"

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.50",
    "mkdocs-material-extensions>=1.3.1",
    "mkdocstrings[python]>=0.26.1",
    "pytest>=8.3.4",
    "typing-extensions>=4.12.2",
]

test = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "requests-mock>=1.9.3",
]
