[metadata]
name = osmdiff
version = 0.3.0
author = Martijn van Exel
author_email = m@rtijn.org
description = A read-only interface to OpenStreetMap change APIs and files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/osmlab/osmdiff
project_urls =
    Bug Tracker = https://github.com/osmlab/osmdiff/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    python-dateutil
    requests
    overpass
    shapely  # only needed for tests

[options.packages.find]
where = src